; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_if.c_pfi_dynaddr_copyout.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_if.c_pfi_dynaddr_copyout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pf_addr_wrap = type { i64, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.TYPE_4__*, i64 }
%struct.TYPE_4__ = type { i64, i64, i32* }

@PF_ADDR_DYNIFTL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pfi_dynaddr_copyout(%struct.pf_addr_wrap* %0) #0 {
  %2 = alloca %struct.pf_addr_wrap*, align 8
  store %struct.pf_addr_wrap* %0, %struct.pf_addr_wrap** %2, align 8
  %3 = load %struct.pf_addr_wrap*, %struct.pf_addr_wrap** %2, align 8
  %4 = getelementptr inbounds %struct.pf_addr_wrap, %struct.pf_addr_wrap* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @PF_ADDR_DYNIFTL, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %22, label %8

8:                                                ; preds = %1
  %9 = load %struct.pf_addr_wrap*, %struct.pf_addr_wrap** %2, align 8
  %10 = getelementptr inbounds %struct.pf_addr_wrap, %struct.pf_addr_wrap* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = icmp eq %struct.TYPE_4__* %12, null
  br i1 %13, label %22, label %14

14:                                               ; preds = %8
  %15 = load %struct.pf_addr_wrap*, %struct.pf_addr_wrap** %2, align 8
  %16 = getelementptr inbounds %struct.pf_addr_wrap, %struct.pf_addr_wrap* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 2
  %20 = load i32*, i32** %19, align 8
  %21 = icmp eq i32* %20, null
  br i1 %21, label %22, label %23

22:                                               ; preds = %14, %8, %1
  br label %40

23:                                               ; preds = %14
  %24 = load %struct.pf_addr_wrap*, %struct.pf_addr_wrap** %2, align 8
  %25 = getelementptr inbounds %struct.pf_addr_wrap, %struct.pf_addr_wrap* %24, i32 0, i32 1
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 1
  %29 = load i64, i64* %28, align 8
  %30 = load %struct.pf_addr_wrap*, %struct.pf_addr_wrap** %2, align 8
  %31 = getelementptr inbounds %struct.pf_addr_wrap, %struct.pf_addr_wrap* %30, i32 0, i32 1
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = add nsw i64 %29, %35
  %37 = load %struct.pf_addr_wrap*, %struct.pf_addr_wrap** %2, align 8
  %38 = getelementptr inbounds %struct.pf_addr_wrap, %struct.pf_addr_wrap* %37, i32 0, i32 1
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 1
  store i64 %36, i64* %39, align 8
  br label %40

40:                                               ; preds = %23, %22
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
